# back-me-up

./: .gitignore  LICENSE  README.md  backup.sh  bmusetup.sh  info.txt  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yaml  publish_cli.yml  publish_tauri.yaml  test_on_pr.yaml
src/: app.d.ts
src-tauri/: .gitignore  Cargo.toml  bacon.toml  tauri.conf.json
src-tauri/bindings/: AppConfig.ts  Backup.ts  BackupKind.ts  Config.ts  Entity.ts  File.ts  Folder.ts  JobStatus.ts  Location.ts  Options.ts  Size.ts
src-tauri/src/: commands.rs  event.rs  handlers.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: app.rs  mod.rs  os.rs
src-tauri/src/jobs/: backup.rs  fs.rs  maintenance.rs  mod.rs  watch.rs
src-tauri/src/models/: app.rs  app_config.rs  backup.rs  folder.rs  mod.rs  storage.rs
src-tauri/src/ssh/: commands.rs  connect.rs  mod.rs
src-tauri/src/tests/: commands.rs  mod.rs  ssh.rs
src/lib/: app_files.ts  button.svelte  concurrency.ts  generate.ts  modal.svelte  parse.ts  select.svelte  store.ts  type_assertion.ts  update.ts  validate.ts
src/lib/style/: mixins.scss  theme.scss
src/lib/ui/: button.svelte  colors.scss  loading_state.svelte  modal.svelte  select.svelte  theme.scss  toggle.svelte
src/lib/ui/job_status/: indicator.svelte  item.svelte  status.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts  init.ts
src/routes/settings/: +page.svelte
src/routes/setup/: +page.svelte
