[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["dialog-confirm", "dialog-open", "fs-create-dir", "fs-exists", "fs-read-file", "fs-remove-file", "fs-write-file", "path-all", "system-tray", "window-close", "window-create", "window-show"] }
ts-rs = "6.2.1"
openssh = "0.9.9"
openssh-sftp-client = { version = "0.13.5", features = ["openssh"] }
futures = "0.3.28"
tokio = "1.28.2"
notify = "6.0.0"
chrono = "0.4.26"

[dev-dependencies]
actix-rt = "*"
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
